# mudanca

./: .gitignore  Makefile  README.md  base.py  imobiliarias_example.yaml  pyproject.toml  run.py
scrapers/: base.py
scrapers/utils/: csv_util.py
utils/: config.py  csv_util.py  headers.py  pages.py  scrap.py
