[tool.poetry]
name = "mudanca"
version = "0.1.0"
description = ""
authors = ["dunossauro <mendesxeduardo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
parsel = "^1.6.0"
httpx = "^0.23.0"
dataclass-wizard = "^0.22.1"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
blue = "^0.9.1"
mypy = "^0.971"

[tool.mypy]
python_version = "3.10"
show_error_codes = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
